# grocery-

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt
apps/basket/: basket.py  forms.py  urls.py  views.py
apps/basket/tests/: test_basket_class_basket.py  test_basket_views.py
apps/basket/tests/fixture/: basket_fixture.py
apps/shop/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/shop/api/: permissions.py  serializers.py  views.py
apps/shop/migrations/: 0001_initial.py  0002_alter_catalog_options_alter_product_options_and_more.py
apps/shop/tests/: factories.py  test_shop_api.py  test_shop_forms.py  test_shop_serializers.py  test_shop_views.py
apps/shop/tests/fixture/: api.py
apps/user/: admin.py  forms.py  tasks.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py
apps/user/tests/: factories.py  test_user_views.py
apps/user/tests/fixture/: models.py
core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py  yasg.py
templates/: base.html
templates/basket/: anonymous.html  detail.html
templates/shop/: dashboard.html
templates/shop/promotion/: detail.html  list.html
templates/shop/promotions/: detail.html
templates/user/: login.html  register.html
